--- a/src/LibrarySystemForDemo.Core/Localization/SourceFiles/LibrarySystemForDemo.xml
+++ b/src/LibrarySystemForDemo.Core/Localization/SourceFiles/LibrarySystemForDemo.xml
@@ -3,7 +3,7 @@
   <texts>
     <text name="HomePage" value="Home page" />
     <text name="About" value="About" />
-    <text name="WelcomeMessage" value="Welcome to LibrarySystemForDemo!" />
+    <text name="WelcomeMessage" value="Welcome to Library System!" />
     <text name="FormIsNotValidMessage" value="Form is not valid. Please check and fix errors." />
     <text name="TenantNameCanNotBeEmpty" value="Tenant name can not be empty" />
     <text name="InvalidUserNameOrPassword" value="Invalid user name or password" />
@@ -149,7 +149,7 @@
     <text name="Author">Authors</text>
 
 
-    <text name="Borrower">Borrower</text>
+    <text name="Borrower">Borrowers</text>
     <text name="BorrowerID">Borrowers ID</text>
     <text name="IsBorrowed">Status</text>
     <text name="BorrowDate">Date Borrowed</text>
